# doorlib

./: .cvsignore  .hgignore  ChangeLog  FILE_ID.DIZ  FILE_ID.DIZ.in  INSTALL  INSTALL.in  Makefile  Makefile.global  Makefile.global.in  README  config.h.in  config.status  configure  configure.in  door.pc  door.pc.in
src/: .cvsignore  Makefile  dispfile.c  door.h  doorlib.h  doorsys.c  funcs.c  input.c  logger.c  output.c  parse.c  timeout.c  xmalloc.c
