dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(src/doorlib.h)
AM_CONFIG_HEADER(config.h)
SUBDIRS="src"
AC_SUBST(SUBDIRS)

dnl General settings for doorlib
dnl After changing the version number, run autoconf!
PACKAGE="doorlib"
VERSION="0.9.0"
COPYRIGHT="Copyright (C) 2003 Michiel Broek, All Rights Reserved"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(LIBVERS)
AC_SUBST(COPYRIGHT)
AC_PREFIX_DEFAULT(/usr)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")
TARGET="$target"

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LN_S
AC_CHECK_PROG(TAR, tar, tar)
CFLAGS="$CFLAGS -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes"

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_MEMCMP

AC_OUTPUT(
	Makefile.global
	INSTALL 
	FILE_ID.DIZ
	door.pc
)

#=================================================================================

AC_MSG_RESULT([
-=-=-=-=-=-=-=-=-=-= Configuration Complete =-=-=-=-=-=-=-=-=-=-

  Configuration summary :

    Version : ..................... ${VERSION}
])

if test x$ac_cv_c_compiler_gnu = xyes ; then
        echo -e "  Tools :\n"
        echo "    Compiler is GCC : ............. ${ac_cv_c_compiler_gnu}"
	fi

AC_MSG_RESULT([
  Installation directories :

    Library directory : ........... ${prefix}/lib
    Include directory : ........... ${prefix}/include
    Pkgconfig directory : ......... ${prefix}/lib/pkgconfig
])

