dnl Process this file with autoconf to produce a configure script.
dnl $Id: configure.in,v 1.10 2006/06/26 18:08:56 mbse Exp $

AC_INIT(src/door.h)
AM_CONFIG_HEADER(config.h)
SUBDIRS="src"
AC_SUBST(SUBDIRS)

dnl
dnl General settings for doorlib
dnl After changing the version number, run autoconf!
dnl
PACKAGE="doorlib"
VERSION="0.9.6"
COPYRIGHT="Copyright (C) 2003-2009 Michiel Broek, All Rights Reserved"
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(LIBVERS)
AC_SUBST(COPYRIGHT)
AC_PREFIX_DEFAULT(/usr/local)
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_DEFINE_UNQUOTED(COPYRIGHT, "$COPYRIGHT")


dnl
dnl Checks for programs.
dnl
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_LN_S
AC_CHECK_PROG(TAR, tar, tar)



dnl
dnl Additional commandline switches
dnl
AC_ARG_ENABLE(debugging,   [  --enable-debugging      Compile for debugging], [ debugging=$enableval ], [ debugging=no ])
if test "$debugging" = "yes"; then
    CFLAGS="-O -g -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes"
else
    CFLAGS="-O2 -Wall -Wshadow -Wwrite-strings -Wstrict-prototypes"
fi



dnl
dnl Checks for header files.
dnl
AC_HEADER_STDC


dnl
dnl Checks for typedefs, structures, and compiler characteristics.
dnl
AC_C_CONST
AC_TYPE_MODE_T
AC_TYPE_SIZE_T


dnl
dnl Checks for library functions.
dnl
AC_FUNC_MEMCMP


dnl
dnl Find pkgconfig directory
dnl
AC_MSG_CHECKING(location of pkgconfig directory)
for pkgdir in "${prefix}/lib/pkgconfig" "${prefix}/lib/libdata/pkgconfig" "${prefix}/libdata/pkgconfig" "/usr/lib/pkgconfig" "/usr/local/lib/pkgconfig" "/usr/libdata/pkgconfig" "/usr/local/libdata/pkgconfig" "/usr/pkg/lib/pkgconfig" "NONE"; do
	if test "$pkgdir" = "NONE"; then
		AC_MSG_ERROR(not found)
	elif test -x $pkgdir; then
		AC_SUBST(pkgdir)
		AC_MSG_RESULT($pkgdir)
		break;
	fi
done


AC_OUTPUT(
	Makefile.global
	INSTALL 
	FILE_ID.DIZ
	door.pc
)

#=================================================================================

AC_MSG_RESULT([
-=-=-=-=-=-=-=-=-=-= Configuration Complete =-=-=-=-=-=-=-=-=-=-

  Configuration summary :

    Version : ..................... ${VERSION}
])

if test x$ac_cv_c_compiler_gnu = xyes ; then
        echo -e "  Tools :\n"
        echo "    Compiler is GCC : ............. ${ac_cv_c_compiler_gnu}"
	fi

AC_MSG_RESULT([
  Installation directories :

    Library directory : ........... ${libdir}
    Include directory : ........... ${prefix}/include
    Pkgconfig directory : ......... ${pkgdir}
])

